fix address wrapping on mobile screen sizes

--- a/SalonML/SalonML/src/app/core/home/resume-contact-us/resume-contact-us.component.css
+++ b/SalonML/SalonML/src/app/core/home/resume-contact-us/resume-contact-us.component.css
@@ -79,3 +79,7 @@
 p {
     font-weight: 300;
 }
+
+.content a {
+  white-space: pre-wrap;
+}
